# trapped-dread

./: Altar.cpp  Altar.h  CMakeLists.txt  CollidableObj.cpp  CollidableObj.h  CollidableTeapot.cpp  CollidableTeapot.h  Cube.h  Exit.cpp  Exit.h  Floor.cpp  Floor.h  LightSource.h  Makefile  Map.cpp  Map.h  MapLoader.cpp  MapLoader.h  Player.cpp  Player.h  README.md  Skull.cpp  Skull.h  Wall.cpp  Wall.h  bio_szkielet_08_win.aps  bio_szkielet_08_win.sln  bio_szkielet_08_win.vcxproj  bio_szkielet_08_win.vcxproj.filters  common.h  constants.h  example.map  f_simplest.glsl  load_obj.cpp  load_obj.h  lodepng.cpp  lodepng.h  main_file.cpp  myCube.h  myTeapot.h  (+5 more)
assets/blender/: blender_face.blend1  glowa.blend  kot.blend  skull.blend  skull.blend1
assets/maps/: example.map  parkour.map  test.map
assets/shaders/: v_simplest.glsl
blender/: column.blend  column.blend1
glew/include/GL/: eglew.h  glew.h  wglew.h
glfw/include/GLFW/: glfw3.h
glm/simd/: matrix.h  neon.h
include/: Altar.h  CollidableObj.h  Floor.h  LightSource.h  Map.h  Shaderprogram.h  Skull.h
include/libs/glew/include/GL/: glxew.h
include/libs/glfw/include/GLFW/: glfw3native.h
include/libs/glm/simd/: platform.h
maps/: MAPS.md  example.map  test.map  ultrakill.map
models/: blender_face.blend  buzia.mtl  kot.blend1  kot2.mtl  moyai.mtl  skull.mtl  table.mtl
src/: Altar.cpp  CollidableObj.cpp  Exit.cpp  Floor.cpp  Lodepng.cpp  Main.cpp  Map.cpp  MapLoader.cpp  Player.cpp  Shaderprogram.cpp  Skull.cpp  Wall.cpp
